v0.10.1/_sources/generated/statsmodels.regression.process_regression.ProcessMLEResults.rst.txt
statsmodels.regression.process\_regression.ProcessMLEResults
============================================================

.. currentmodule:: statsmodels.regression.process_regression

.. autoclass:: ProcessMLEResults

   

   .. HACK -- the point here is that we don't want this to appear in the output, but the autosummary should still generate the pages.
      .. autosummary::
         :toctree:
      
         ProcessMLEResults.aic
         ProcessMLEResults.bic
         ProcessMLEResults.bootstrap
         ProcessMLEResults.bse
         ProcessMLEResults.bsejac
         ProcessMLEResults.bsejhj
         ProcessMLEResults.conf_int
         ProcessMLEResults.cov_params
         ProcessMLEResults.covariance
         ProcessMLEResults.covariance_group
         ProcessMLEResults.covjac
         ProcessMLEResults.covjhj
         ProcessMLEResults.df_modelwc
         ProcessMLEResults.f_test
         ProcessMLEResults.get_nlfun
         ProcessMLEResults.hessv
         ProcessMLEResults.initialize
         ProcessMLEResults.llf
         ProcessMLEResults.load
         ProcessMLEResults.normalized_cov_params
         ProcessMLEResults.predict
         ProcessMLEResults.pvalues
         ProcessMLEResults.remove_data
         ProcessMLEResults.save
         ProcessMLEResults.score_obsv
         ProcessMLEResults.summary
         ProcessMLEResults.t_test
         ProcessMLEResults.t_test_pairwise
         ProcessMLEResults.tvalues
         ProcessMLEResults.wald_test
         ProcessMLEResults.wald_test_terms



   

   .. HACK -- the point here is that we don't want this to appear in the output, but the autosummary should still generate the pages.
      .. autosummary::
         :toctree:
      
         ProcessMLEResults.use_t

