v0.15.0/_sources/generated/statsmodels.regression.process_regression.ProcessMLEResults.rst.txt
statsmodels.regression.process\_regression.ProcessMLEResults
============================================================

.. currentmodule:: statsmodels.regression.process_regression

.. autoclass:: ProcessMLEResults
   :exclude-members: bootstrap,conf_int,cov_params,covariance,covariance_group,f_test,get_nlfun,get_prediction,initialize,load,normalized_cov_params,predict,remove_data,save,summary,t_test,t_test_pairwise,wald_test,wald_test_terms,

   
   
   .. rubric:: Methods

   .. autosummary::
      :toctree:

      ~ProcessMLEResults.bootstrap
      ~ProcessMLEResults.conf_int
      ~ProcessMLEResults.cov_params
      ~ProcessMLEResults.covariance
      ~ProcessMLEResults.covariance_group
      ~ProcessMLEResults.f_test
      ~ProcessMLEResults.get_nlfun
      ~ProcessMLEResults.get_prediction
      ~ProcessMLEResults.initialize
      ~ProcessMLEResults.load
      ~ProcessMLEResults.normalized_cov_params
      ~ProcessMLEResults.predict
      ~ProcessMLEResults.remove_data
      ~ProcessMLEResults.save
      ~ProcessMLEResults.summary
      ~ProcessMLEResults.t_test
      ~ProcessMLEResults.t_test_pairwise
      ~ProcessMLEResults.wald_test
      ~ProcessMLEResults.wald_test_terms
   
   
   

   
   
   .. rubric:: Properties

   .. autosummary::
      :toctree:

      ~ProcessMLEResults.aic
      ~ProcessMLEResults.bic
      ~ProcessMLEResults.bse
      ~ProcessMLEResults.bsejac
      ~ProcessMLEResults.bsejhj
      ~ProcessMLEResults.covjac
      ~ProcessMLEResults.covjhj
      ~ProcessMLEResults.df_modelwc
      ~ProcessMLEResults.hessv
      ~ProcessMLEResults.llf
      ~ProcessMLEResults.pvalues
      ~ProcessMLEResults.score_obsv
      ~ProcessMLEResults.tvalues
      ~ProcessMLEResults.use_t
   
   
   